--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -99,6 +99,10 @@
     @apply mb-4 text-xl font-extrabold tracking-tight text-gray-900 dark:text-white
   }
 
+  p, li {
+    @apply text-[18px] leading-6 font-light
+  }
+
   i {   
     font-style: normal !important;
   } 
