fumadocs: buttons font size

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -125,9 +125,8 @@
   article div ul li:not(:last-child){
     margin-bottom: 0.5rem;
   }
-    
 
-  @media (max-width:770px) {  
+  @media (max-width:770px) {
     table thead tr {
        display: none;
      }
@@ -156,6 +155,10 @@
        padding-right: 20px;
        content: attr(data-title);
        text-align: left;
+     }
+
+     .font-medium {
+      font-size: 14px;
      }
    }
 
