--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -31,6 +31,8 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --success: 173 58% 39%;
+    --success-foreground: 355.7 100% 97.3%;
   }
   
  
@@ -59,6 +61,8 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --success: 173 58% 39%;
+    --success-foreground: 355.7 100% 97.3%;
   }
 
   :root {
@@ -98,7 +102,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground flex flex-col;
+    @apply bg-background text-foreground flex flex-col;    
   }
 
   main {
@@ -113,6 +117,11 @@
     @apply text-[18px] leading-6 font-light
   }
 
+  a {
+    transition: color 0.3s ease;
+  }
+
+
   i {   
     font-style: normal !important;
   }  
@@ -125,6 +134,11 @@
   article div ul li:not(:last-child){
     margin-bottom: 0.5rem;
   }
+
+ 
+    
+
+  
 
   @media (max-width:770px) {
     table thead tr {
