--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -178,3 +178,19 @@
    }
 
 }
+
+
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+
+  }
+  body {
+    @apply bg-background text-foreground;
+
+  }
+
+}
