--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -162,14 +162,15 @@
      table td button {
        width: 50%;
      }
-     table td div::before{
+     table tbody tr td::before{
        margin-bottom: 5px;
        display: inline-block;
-       width: 75px;
+       width: 175px;
        color: #6C7A89;
        padding-right: 20px;
        content: attr(data-title);
        text-align: left;
+       font-weight: 500;
      }
 
      .font-medium {
